--------------------------------------------------------------------------------
 OSM2World 0.1.7                                                     2011-??-?? 
--------------------------------------------------------------------------------
 
 * viewer: add option to choose between different elevation calculation methods
 * new ZeroElevationCalculator that sets everything to elevation 0
 * new config option createTerrain to disable terrain calculation
 * use ele tags on invisible ways and areas
 * artificial nodes in ways for better terrain elevation
 * ability to render orthographic view from north, west, or east
 * support for parameter files
 * more street furniture: advertising columns, billboards, benches
 * render handrails on steps
 * update of Osmosis lib version and support for .osm.pbf files
 * GLPbuffer for command line rendering (png output no longer requires a window)
 * filter degenerate triangles from POVRay output
 * new Exit action (menu item and shortcut)
 
 
--------------------------------------------------------------------------------
 OSM2World 0.1.6                                                     2011-05-16 
--------------------------------------------------------------------------------
 
 * fewer visual artifacts when scenes mix known and unknown ele
 * unconnected WorldObjects influence terrain triangulation
 * new WorldObject: building entrance
 * support for min_height
 * always use JOSM workaround for .osm files with generator='JOSM'
 * use ele tags on ways and areas for elevation calculation
 * show error message box even for unexpected errors
 
 
--------------------------------------------------------------------------------
 OSM2World 0.1.5                                                     2011-04-30 
--------------------------------------------------------------------------------
 
 * configurable materials
 * configuration file no longer limited to command line interface
 * zoom with +/- keys